--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,125 @@
-html,
-body {
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
+
+
+*,
+*:before,
+*:after {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+html,
+body {
+  --color-dark: #000000;
+  --color-accent-dark: #0D4848;
+  --color-accent-mid: #0b6b0b;
+  --color-accent-light: #f1b897;
+  --color-light: #f0f0f7;
+  --font-fancy: 'Italianno', cursive;
+  --font-normal: 'Playfair Display', serif;
+  font-size: 62.5%;
+  font-family: var(--font-normal);
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  box-sizing: inherit;
 }
+p, li {
+  font-size: 1.7rem;
+  color: var(--color-dark);
+  letter-spacing: .05rem;
+  line-height: 2.8rem;
+ }
+img {
+  border-radius: 5px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+nav,
+a, 
+button {
+  font-family: var(--font-fancy);
+ }
+h2,
+h3,
+h4,
+h5,
+time,
+address {
+  text-shadow: 0px 1px 1px var(--color-accent-dark);
+  letter-spacing: .3rem;
+  padding: .5rem;
+}
+h2,
+h6,
+time,
+address {
+  text-align: center;
+}
+h4,
+h5,
+time,
+address {
+  padding-top: 0rem;
+}
+cite {
+  text-align: end;
+}
+ h1 {
+  font-size: 3rem;
+ }
+ h2 {
+  font-size: 2.6rem
+ }
+ h3 {
+  font-size: 2.3rem
+ }
+ h4 {
+   font-size: 1.8rem;
+ }
+ h5,
+ h6 {
+   font-size: 1.6rem;
+ }
+ address,
+ time {
+   font-size: 1.4rem;
+   font-style: italic;
+ }
+ a,
+ button {
+   color: var(--color-dark);
+   font-size: 1.8rem;
+   text-decoration: none;
+   cursor: pointer;
+   border: none;
+ }
+ button {
+   background-color: inherit;
+ }
+ ol, ul {   
+	list-style: none;
+}
+article {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: auto;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+ 
