--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
 
 *,
 *:before,
@@ -10,23 +10,24 @@
 }
 html,
 body {
-  --color-dark: #000000;
-  --color-accent-dark: #0D4848;
-  --color-accent-mid: #0b6b0b;
-  --color-accent-light: #f1b897;
-  --color-light: #f0f0f7;
-  --font-fancy: 'Italianno', cursive;
-  --font-normal: 'Playfair Display', serif;
   font-size: 62.5%;
-  font-family: var(--font-normal);
-  padding: 0;
-  margin: 0;
+  font-family: 'EB Garamond', serif;
   box-sizing: border-box;
   box-sizing: inherit;
+  --color-dark: #000;
+  --color-accent-dark: #15133c;
+  --color-accent-mid: #73777b;
+  --color-accent-light: #ec994b;
+  --color-light: #fff;
+  
+  --color-correct: green;
+  --color-incorrect: red;
+  
+  padding: 0;
+  margin: 0;
 }
 p, li {
   font-size: 1.7rem;
-  color: var(--color-dark);
   letter-spacing: .05rem;
   line-height: 2.8rem;
  }
@@ -41,74 +42,43 @@ h5,
 h6,
 nav,
 a, 
-button {
-  font-family: var(--font-fancy);
- }
-h2,
-h3,
-h4,
-h5,
+button,
 time,
 address {
-  text-shadow: 0px 1px 1px var(--color-accent-dark);
+  font-family: 'Macondo', cursive;
   letter-spacing: .3rem;
   padding: .5rem;
-}
-h2,
-h6,
-time,
-address {
-  text-align: center;
-}
-h4,
-h5,
-time,
-address {
-  padding-top: 0rem;
 }
 cite {
   text-align: end;
 }
  h1 {
-  font-size: 3rem;
+  font-size: 3.5rem;
  }
  h2 {
-  font-size: 2.6rem
+  font-size: 2.5rem
  }
  h3 {
-  font-size: 2.3rem
+  font-size: 2rem
  }
- h4 {
-   font-size: 1.8rem;
- }
+ h4,
  h5,
  h6 {
-   font-size: 1.6rem;
+   font-size: 1.9rem;
  }
  address,
  time {
    font-size: 1.4rem;
    font-style: italic;
  }
- a,
- button {
-   color: var(--color-dark);
-   font-size: 1.8rem;
-   text-decoration: none;
-   cursor: pointer;
-   border: none;
+ a, button, li {
+    font-size: 1.8rem;
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
  }
- button {
-   background-color: inherit;
- }
- ol, ul {   
+ ol, ul, li {   
 	list-style: none;
-}
-article {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  margin: auto;
 }
 blockquote, q {
 	quotes: none;
@@ -122,4 +92,3 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
- 
